--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-client": "webpack",
     "build-client-watch": "webpack -w",
     "start": "node server",
-    "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
+    "start-dev": "NODE_ENV='development' webpack-dev-server --content-base public/",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "body-parser": "^1.18.3",
     "firebase": "^5.3.1",
     "history": "^4.7.2",
+    "path": "^0.12.7",
     "react": "^16.3.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
@@ -57,6 +58,7 @@
     "prettier": "1.11.1",
     "redux-devtools-extension": "^2.13.2",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   }
 }
