--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "^4.7.2",
     "path": "^0.12.7",
     "react": "^16.3.1",
+    "react-canvas-draw": "^0.1.9",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
