--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@firebase/storage": "^0.2.3",
     "body-parser": "^1.18.3",
     "firebase": "^5.3.1",
+    "firebase-admin": "^6.0.0",
     "history": "^4.7.2",
     "path": "^0.12.7",
     "react": "^16.3.1",
@@ -54,6 +55,7 @@
     "eslint-config-fullstack": "^5.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
+    "firebase-functions": "^2.0.5",
     "nodemon": "^1.17.5",
     "prettier": "1.11.1",
     "redux-devtools-extension": "^2.13.2",
